examples_yamls/istio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kiali.mostela.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exposekiali
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress-prometheus
  namespace: istio-system
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /metrics/grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
